# osc-drone

./: README.md  compile_commands.json
.clangd/index/: imu_reader_node.cpp.1EC9A6285E421DF9.idx
autopilot_interface/: CMakeLists.txt  package.xml
autopilot_interface/include/autopilot_interface/: autopilot_interface.h
autopilot_interface/src/: autopilot_interface.cpp  main.cpp
common_msgs/: CMakeLists.txt  package.xml
drone_control/: CMakeLists.txt  package.xml
drone_control/include/drone_control/: mavros_interface.h
drone_control/src/: main.cpp
drone_control/src/drone_control/: mavros_interface.cpp
drone_health_monitor/: CMakeLists.txt  package.xml
drone_health_monitor/msg/: DroneHealth.msg  SubsystemStatus.msg
drone_health_monitor/src/: drone_health_monitor_node.py
drone_state_machine/: CMakeLists.txt  package.xml
drone_state_machine/src/: state_machine.py
flight_controller/: CMakeLists.txt  package.xml
flight_controller/srv/: FlightCommand.srv
launch/: apm.launch
