<?xml version="1.0"?>
<package format="2">
  <name>drone_health_monitor</name>
  <version>0.1.0</version>
  <description>The drone_health_monitor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alexwala@todo.todo">alexwala</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>message_generation</build_depend> <!-- Message generation required at build time -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Exported build dependencies -->
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> <!-- Ensure message_runtime is included here -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
